--- a/config/mulran.yaml
+++ b/config/mulran.yaml
@@ -41,7 +41,7 @@ mapping:
     fov_degree:    100
     det_range:     260.0
     cube_len: 200   # range
-    extrinsic_est_en:  true      # true: enable the online estimation of IMU-LiDAR extrinsic
+    extrinsic_est_en:  false      # true: enable the online estimation of IMU-LiDAR extrinsic
     mappingSurfLeafSize: 0.2
     keyframeAddingDistThreshold: 1.0
     keyframeAddingAngleThreshold: 0.2
