--- a/config/online_relo_new.yaml
+++ b/config/online_relo_new.yaml
@@ -5,7 +5,9 @@ relo:
     searchDis: 5.0
     searchNum: 2
     trustDis: 5.0
-    regMode: 1  # (0~7), but methods 4, 5 and 7 need normal information
+    # 0: ICP 1: AA-ICP 2: Our Fast ICP 3: Our Robust ICP 4: ICP Point-to-plane
+    # 5: Our Robust ICP point to plane 6: Sparse ICP 7: Sparse ICP point to plane
+    regMode: 3  # (0~7), but methods 4, 5 and 7 need normal information
 
     extrinsic_T: [1.77, -0.00, -0.05] # lidar to imu
     extrinsic_R: [ -1, 0, 0, 
