--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,6 +127,7 @@ add_library(sc include/sc-relo/Scancontext.cpp)
 add_library(incremental_mapping include/multi-session/Incremental_mapping.cpp include/sc-relo/Scancontext.cpp)
 # add_library(fpfh_teaser include/teaser-toolkit/fpfh_teaser.cpp)
 add_library(pose_estimator include/online-relo/pose_estimator_new.cpp include/sc-relo/Scancontext.cpp)
+add_library(tgrs include/dynamic-remove/tgrs.cpp)
 
 # fastlio2 mapping
 add_executable(fastlio_sam_mapping src/laserMapping.cpp)
