--- a/config/online_relo.yaml
+++ b/config/online_relo.yaml
@@ -14,12 +14,12 @@ relo:
     #                 0, -1, 0, 
     #                 0, 0, 1]
 
-    # extrinsic_T: [ 0.071, -0.053, 0.097 ] # zhongyifeng
-    # extrinsic_R: [ 0.9935, -0.0140, -0.1128,
-    #                0.0137, 0.9999, -0.0040,
-    #                0.1128, 0.0024, 0.9936]
+    extrinsic_T: [ 0.071, -0.053, 0.097 ] # zhongyifeng
+    extrinsic_R: [ 0.9935, -0.0140, -0.1128,
+                   0.0137, 0.9999, -0.0040,
+                   0.1128, 0.0024, 0.9936]
 
-    extrinsic_T: [ 0.05512, 0.02226, -0.0297 ]   # mid360
-    extrinsic_R: [ 1, 0, 0,
-                   0, 1, 0,
-                   0, 0, 1]
+    # extrinsic_T: [ 0.05512, 0.02226, -0.0297 ]   # mid360
+    # extrinsic_R: [ 1, 0, 0,
+    #                0, 1, 0,
+    #                0, 0, 1]
