--- a/config/mulran.yaml
+++ b/config/mulran.yaml
@@ -52,14 +52,14 @@ mapping:
 
 ikdtree:
     max_iteration: 3
-    recontructKdTree: true  # if path is too large, the rviz will crash, but default is false
-    kd_step: 50
-    filter_size_map_min: 0.4
+    recontructKdTree: false  # if path is too large, the rviz will crash, but default is false
+    kd_step: 30
+    filter_size_map_min: 0.3
 
 loop:
-    loopClosureEnableFlag: true  # set false when using online relo
+    loopClosureEnableFlag: false  # set false when using online relo
     loopClosureFrequency: 1.0
-    historyKeyframeSearchRadius: 10.0
+    historyKeyframeSearchRadius: 30.0
     historyKeyframeSearchTimeDiff: 30.0
     historyKeyframeSearchNum: 1
     historyKeyframeFitnessScore: 0.3
