--- a/config/online_relo.yaml
+++ b/config/online_relo.yaml
@@ -1,5 +1,5 @@
 relo:
-    priorDir: "/home/yixin-f/fast-lio2/src/zhongyifeng/loc"
+    priorDir: "/home/yixin-f/fast-lio2/src/seu/school/data_lio"
     cloudTopic: "/cloud_registered"
     poseTopic: "/Odometry"
     searchDis: 5.0
@@ -7,19 +7,24 @@ relo:
     trustDis: 5.0
     # 0: ICP 1: AA-ICP 2: Our Fast ICP 3: Our Robust ICP 4: ICP Point-to-plane
     # 5: Our Robust ICP point to plane 6: Sparse ICP 7: Sparse ICP point to plane
-    regMode: 6  # (0~7), but methods 4, 5 and 7 need normal information
+    regMode: 3 # (0~7), but methods 4, 5 and 7 need normal information
 
     # extrinsic_T: [1.77, -0.00, -0.05] # lidar to imu # parkinglot
     # extrinsic_R: [ -1, 0, 0, 
     #                 0, -1, 0, 
     #                 0, 0, 1]
 
-    extrinsic_T: [ 0.071, -0.053, 0.097 ] # zhongyifeng
-    extrinsic_R: [ 0.9935, -0.0140, -0.1128,
-                   0.0137, 0.9999, -0.0040,
-                   0.1128, 0.0024, 0.9936]
+    # extrinsic_T: [ 0.031, -0.10, 0.11]  # seu velo16
+    # extrinsic_R: [ 0.9994142, 0.03275957, 0.00990251,
+    #               -0.03266505,  0.99942062, -0.00956125,
+    #               -0.01021,  0.00923218,  0.99990526]
 
-    # extrinsic_T: [ 0.05512, 0.02226, -0.0297 ]   # mid360
-    # extrinsic_R: [ 1, 0, 0,
-    #                0, 1, 0,
-    #                0, 0, 1]
+    # extrinsic_T: [ 0.071, -0.053, 0.097 ] # zhongyifeng
+    # extrinsic_R: [ 0.9935, -0.0140, -0.1128,
+    #                0.0137, 0.9999, -0.0040,
+    #                0.1128, 0.0024, 0.9936]
+
+    extrinsic_T: [ 0.05512, 0.02226, -0.0297 ]   # mid360
+    extrinsic_R: [ 1, 0, 0,
+                   0, 1, 0,
+                   0, 0, 1]
