--- a/config/velodyne16.yaml
+++ b/config/velodyne16.yaml
@@ -46,20 +46,20 @@ mapping:
     mappingSurfLeafSize: 0.2
     keyframeAddingDistThreshold: 1.0
     keyframeAddingAngleThreshold: 0.2
-    # extrinsic_T: [ 0.031, -0.10, 0.11]  # seu
-    # extrinsic_R: [ 0.9994142, 0.03275957, 0.00990251,
-    #               -0.03266505,  0.99942062, -0.00956125,
-    #               -0.01021,  0.00923218,  0.99990526]
+    extrinsic_T: [ 0.031, -0.10, 0.11]  # seu
+    extrinsic_R: [ 0.9994142, 0.03275957, 0.00990251,
+                  -0.03266505,  0.99942062, -0.00956125,
+                  -0.01021,  0.00923218,  0.99990526]
 
-    extrinsic_T: [ 0.071, -0.053, 0.097 ] # zhongyifeng
-    extrinsic_R: [ 0.9935, -0.0140, -0.1128,
-                   0.0137, 0.9999, -0.0040,
-                   0.1128, 0.0024, 0.9936]
+    # extrinsic_T: [ 0.071, -0.053, 0.097 ] # zhongyifeng
+    # extrinsic_R: [ 0.9935, -0.0140, -0.1128,
+    #                0.0137, 0.9999, -0.0040,
+    #                0.1128, 0.0024, 0.9936]
 
 ikdtree:
     max_iteration: 3
-    recontructKdTree: true  # if path is too large, the rviz will crash, but default is false
-    kd_step: 50
+    recontructKdTree: false  # if path is too large, the rviz will crash, but default is false
+    kd_step: 30
     filter_size_map_min: 0.2
 
 loop:
