--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,19 +129,19 @@ add_library(incremental_mapping include/multi-session/Incremental_mapping.cpp in
 add_library(pose_estimator include/online-relo/pose_estimator.cpp include/sc-relo/Scancontext.cpp)
 add_library(tgrs include/dynamic-remove/tgrs.cpp)
 
-# # fastlio2 mapping
-# add_executable(fastlio_sam_mapping src/laserMapping.cpp)
-# target_link_libraries(fastlio_sam_mapping ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${PYTHON_LIBRARIES} ${GeographicLib_LIBRARIES} ${OpenCV_LIBRARIES} ikd_Tree preprocess sc gtsam /usr/lib/gcc/x86_64-linux-gnu/7/libstdc++fs.a) 
-# target_include_directories(fastlio_sam_mapping PRIVATE ${PYTHON_INCLUDE_DIRS})
+# fastlio2 mapping
+add_executable(fastlio_sam_mapping src/laserMapping.cpp)
+target_link_libraries(fastlio_sam_mapping ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${PYTHON_LIBRARIES} ${GeographicLib_LIBRARIES} ${OpenCV_LIBRARIES} ikd_Tree preprocess sc gtsam /usr/lib/gcc/x86_64-linux-gnu/7/libstdc++fs.a) 
+target_include_directories(fastlio_sam_mapping PRIVATE ${PYTHON_INCLUDE_DIRS})
 
-# # multi-session for relocalization and merge
-# add_executable(multi_session src/multi_session.cpp)
-# target_link_libraries(multi_session ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${PYTHON_LIBRARIES} ${GeographicLib_LIBRARIES} incremental_mapping gtsam /usr/lib/gcc/x86_64-linux-gnu/7/libstdc++fs.a) 
+# multi-session for relocalization and merge
+add_executable(multi_session src/multi_session.cpp)
+target_link_libraries(multi_session ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${PYTHON_LIBRARIES} ${GeographicLib_LIBRARIES} incremental_mapping gtsam /usr/lib/gcc/x86_64-linux-gnu/7/libstdc++fs.a) 
 
-# # online relocalization
-# add_executable(online_relo src/online_relocalization.cpp)
-# target_link_libraries(online_relo ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${PYTHON_LIBRARIES} ${GeographicLib_LIBRARIES} ${OpenCV_LIBRARIES} pose_estimator incremental_mapping gtsam /usr/lib/gcc/x86_64-linux-gnu/7/libstdc++fs.a)
+# online relocalization
+add_executable(online_relo src/online_relocalization.cpp)
+target_link_libraries(online_relo ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${PYTHON_LIBRARIES} ${GeographicLib_LIBRARIES} ${OpenCV_LIBRARIES} pose_estimator incremental_mapping gtsam /usr/lib/gcc/x86_64-linux-gnu/7/libstdc++fs.a)
 
 # dynamic remover test
-add_executable(dyremover src/dyremover_test.cpp)
-target_link_libraries(dyremover ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${PYTHON_LIBRARIES} ${GeographicLib_LIBRARIES} ${OpenCV_LIBRARIES} tgrs gtsam /usr/lib/gcc/x86_64-linux-gnu/7/libstdc++fs.a)
+add_executable(object_update src/object_update.cpp)
+target_link_libraries(object_update ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${PYTHON_LIBRARIES} ${GeographicLib_LIBRARIES} ${OpenCV_LIBRARIES} tgrs gtsam /usr/lib/gcc/x86_64-linux-gnu/7/libstdc++fs.a)
