--- a/config/mulran.yaml
+++ b/config/mulran.yaml
@@ -57,7 +57,7 @@ ikdtree:
     filter_size_map_min: 0.3
 
 loop:
-    loopClosureEnableFlag: false  # set false when using online relo
+    loopClosureEnableFlag: true  # set false when using online relo
     loopClosureFrequency: 1.0
     historyKeyframeSearchRadius: 30.0
     historyKeyframeSearchTimeDiff: 30.0
